# TurtleBot3

./: README.md
src/octave/octave_rosbridge/: advertise.m  init_ros.m  load_ros.m  msg2json_test.m  test_ros.m
src/octave/octave_rosbridge/helper/: bool2str.m  msg2struct.m  pose2trans.m  trans2quat.m
src/octave/octave_rosbridge/msg/: geometry_msgs_Pose.m  geometry_msgs_PoseStamped.m  std_msgs_Float64MultiArray.m  std_msgs_Header.m  std_msgs_MultiArrayDimension.m  turtlebot3_exercise_msgs_FKResult.m  turtlebot3_exercise_msgs_IKResult.m
src/octave/octave_rosbridge/objects/: Header.m  PoseStamped.m
src/octave/octave_rosbridge/srv/: rospy_tutorials_AddTwoInts.m
src/robot_self_filter/: CMakeLists.txt  nodelets.xml  package.xml
src/robot_self_filter/include/robot_self_filter/: self_filter.h  self_mask.h  self_see_filter.h
src/robot_self_filter/src/: self_filter.cpp  self_filter_node.cpp  self_filter_nodelet.cpp  test_filter.cpp
src/turtlebot/turtlebot3_common/tuda_turtlebot3_arm_description/: 10.tuda_turtlebot3_arm_description.bash.em  CMakeLists.txt  package.xml
src/turtlebot/turtlebot3_common/tuda_turtlebot3_arm_description/launch/: load_tuda_turtlebot3_arm_robot_description.launch  xacrodisplay_tuda_turtlebot3_arm.launch
src/turtlebot/turtlebot3_common/tuda_turtlebot3_arm_description/urdf/: tuda_turtlebot3_arm.gazebo.xacro  tuda_turtlebot3_arm.urdf.xacro  tuda_turtlebot3_arm.xacro
src/turtlebot/turtlebot3_common/tuda_turtlebot3_description/launch/: load_tuda_turtlebot3_robot_description.launch
src/turtlebot/turtlebot3_exercise_msgs/: CMakeLists.txt  package.xml
src/turtlebot/turtlebot3_exercise_msgs/action/: GetBallStates.action  MoveBase.action
src/turtlebot/turtlebot3_exercise_msgs/msg/: BallState.msg  FKRequest.msg  FKResult.msg  IKRequest.msg  IKResult.msg
src/turtlebot/turtlebot3_simulation/tuda_turtlebot3_gazebo/: CMakeLists.txt  package.xml
src/turtlebot/turtlebot3_usb_camera/: CMakeLists.txt  calibration.yaml  package.xml
src/turtlebot/turtlebot3_usb_camera/launch/: usb_camera.launch
src/turtlebot/turtlebot3_usb_launcher/: 30.setup.bash.em  CMakeLists.txt  package.xml
src/turtlebot/turtlebot3_usb_launcher/scripts/completion/: usb_stick.sh
src/turtlebot/turtlebot3_usb_launcher/scripts/helper/: usb_create_stick.sh  usb_make_and_copy.sh
src/turtlebot/turtlebot3_usb_launcher/usb_stick_files/: autolaunch.sh
src/turtlebot/turtlebot3_usb_launcher/usb_stick_files/launch/: launch.txt
src/turtlebot/turtlebot3_usb_launcher/usb_stick_files/scripts/: script.txt
src/turtlebot/turtlebot_scripts/: 20.setup.bash.em  90.exports.bash.em  package.xml
src/turtlebot/turtlebot_scripts/scripts/: upgrade_all_robots.sh
(+39 files in other folders)
