<?xml version="1.0"?>
<package>
  <name>turtlebot3_usb_launcher</name>
  <version>0.0.0</version>
  <description>The turtlebot3_usb_launcher package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="stumpf@sim.tu-darmstadt.de">Alexander Stumpf</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/thor_scripts</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="lenhart@sim.tu-darmstadt.de">Malte Lenhart</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

</package>
